feat: finish ex00

--- a/ex00/Makefile
+++ b/ex00/Makefile
@@ -1,5 +1,5 @@
 override NAME = megaphone
-override CFLAGS = -std=c++98 -Wall -Wextra -Werror
+override CFLAGS = -std=c++98 -Wall -Wextra -Werror -Wno-used
 override CC = c++
 
 OBJ = megaphone.o
@@ -14,5 +14,18 @@ clean:
 
 fclean: clean
 	$(RM) $(NAME)
+
+test: all
+	@echo "shhhhh... I think the students are asleep..."
+	@echo
+	./$(NAME) "shhhhh... I think the students are asleep..."
+
+	@echo
+	@echo Damnit " ! " "Sorry students, I thought this thing was off."
+	@echo
+	./$(NAME) Damnit " ! " "Sorry students, I thought this thing was off."
+
+	@echo
+	./$(NAME)
 
 re: clean all
