refactory: change variable SRC from Makefile ex04 from second list

--- a/second_list/ex04/Makefile
+++ b/second_list/ex04/Makefile
@@ -3,10 +3,7 @@ override CC = c++
 override CFLAGS = -std=c++98 -Wall -Wextra -Werror
 override RM = rm -f
 
-override define SRC
-	main.cpp
-	SedIsForLosers.cpp
-endef
+override SRC = main.cpp SedIsForLosers.cpp
 
 override OBJ = $(SRC:%.cpp=%.o)
 
