--- a/fourth_list/ex01/Makefile
+++ b/fourth_list/ex01/Makefile
@@ -1,6 +1,6 @@
 NAME = clap_trap
 override CXX = c++
-override CXXFLAGS = -std=c++98 -Wall -Wextra -Werror
+override CXXFLAGS = -std=c++98 -Wall -Wextra -Werror -Wshadow
 override RM = rm -f
 override SRC = main.cpp ClapTrap.cpp
 override OBJ = $(SRC:%.cpp=%.o)
