finish ex02 from sixth_list

--- a/sixth_list/ex02/Makefile
+++ b/sixth_list/ex02/Makefile
@@ -6,7 +6,9 @@ override SRC = main.cpp\
 	AForm.cpp\
 	BureaucracyConstitution.cpp\
 	Bureaucrat.cpp\
-	ShrubberyCreationForm.cpp
+	ShrubberyCreationForm.cpp\
+	RobotomyRequestForm.cpp\
+	PresidentialPardomForm.cpp
 
 override OBJ = $(SRC:%.cpp=%.o)
 
