feat: implement first version of ex00 seventh_list

--- a/seventh_list/ex00/Makefile
+++ b/seventh_list/ex00/Makefile
@@ -1,7 +1,7 @@
 NAME = types
 override CXX = c++
 override CXXFLAGS = -std=c++98 -Wall -Wextra -Werror -Wconversion
-override SRC = main.cpp
+override SRC = main.cpp Types.cpp
 override OBJ = $(SRC:%.cpp=%.o)
 
 all: $(NAME)
