refactory: move exceptions to distinticts classes

--- a/sixth_list/ex02/Makefile
+++ b/sixth_list/ex02/Makefile
@@ -3,8 +3,8 @@ override CXX = c++
 override CXXFLAGS = -std=c++98 -Wall -Wextra -Werror -Wshadow
 override RM = rm -f
 override SRC = main.cpp\
-	AForm.cpp\
-	BureaucracyConstitution.cpp\
+	Form.cpp\
+	Exceptions.cpp\
 	Bureaucrat.cpp\
 	ShrubberyCreationForm.cpp\
 	RobotomyRequestForm.cpp\
