fix: implementation in header of non template function

--- a/nineth_list/ex00/Makefile
+++ b/nineth_list/ex00/Makefile
@@ -1,8 +1,8 @@
 NAME = easyfind
 override CXX = c++
 override CXXFLAGS = -std=c++98 -Wall -Wextra -Werror
-override SRC = main.cpp
-override OBJ = main.o
+override SRC = main.cpp NotFoundException.cpp
+override OBJ = main.o NotFoundException.o
 override RM = rm -f
 
 all: $(NAME)
